// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adjust.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-horizontal"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-avatar t-avatar--circle"
        style="margin-right: 40px;"
      >
        <span
          style="transform: scale(1);"
        >
          王
        </span>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-avatar t-avatar--circle"
        style="margin-right: 40px;"
      >
        <span
          style="transform: scale(1);"
        >
          王亿
        </span>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-avatar t-avatar--circle"
        style="margin-right: 40px;"
      >
        <span
          style="transform: scale(1);"
        >
          王亿亿
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-horizontal"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-avatar t-avatar--circle"
        style="margin-right: 40px;"
      >
        <img
          src="https://tdesign.gtimg.com/site/avatar.jpg"
        />
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-avatar t-avatar--circle"
        style="margin-right: 40px;"
      >
        <span
          style="transform: scale(1);"
        >
          W
        </span>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-avatar t-avatar--circle t-avatar-icon"
        style="margin-right: 40px;"
      >
        <svg
          class="t-icon t-icon-user"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-avatar t-avatar--circle"
        style="margin-right: 40px;"
      >
        <span
          style="transform: scale(1);"
        >
          <svg
            class="t-icon t-icon-user"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`group.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-avatar-group t-avatar--offset-right"
      >
        <div
          class="t-avatar t-avatar--circle"
        >
          <img
            src="https://tdesign.gtimg.com/site/avatar.jpg"
          />
        </div>
        <div
          class="t-avatar t-avatar--circle"
        >
          <span
            style="transform: scale(1);"
          >
            W
          </span>
        </div>
        <div
          class="t-avatar t-avatar--circle t-avatar-icon"
        >
          <svg
            class="t-icon t-icon-user"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-avatar-group t-avatar--offset-right"
      >
        <div
          class="t-avatar t-avatar--circle"
        >
          <img
            src="https://tdesign.gtimg.com/site/avatar.jpg"
          />
        </div>
        <div
          class="t-avatar t-avatar--circle"
        >
          <span
            style="transform: scale(1);"
          >
            W
          </span>
        </div>
        <div
          class="t-avatar t-avatar--circle t-avatar-icon"
        >
          <svg
            class="t-icon t-icon-user"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`group-cascading.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-avatar-group t-avatar--offset-right"
      >
        <div
          class="t-avatar t-avatar--circle"
        >
          <img
            src="https://tdesign.gtimg.com/site/avatar.jpg"
          />
        </div>
        <div
          class="t-avatar t-avatar--circle"
        >
          <span
            style="transform: scale(1);"
          >
            W
          </span>
        </div>
        <div
          class="t-avatar t-avatar--circle t-avatar-icon"
        >
          <svg
            class="t-icon t-icon-user"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-avatar-group t-avatar--offset-left"
      >
        <div
          class="t-avatar t-avatar--circle"
        >
          <img
            src="https://tdesign.gtimg.com/site/avatar.jpg"
          />
        </div>
        <div
          class="t-avatar t-avatar--circle"
        >
          <span
            style="transform: scale(1);"
          >
            W
          </span>
        </div>
        <div
          class="t-avatar t-avatar--circle t-avatar-icon"
        >
          <svg
            class="t-icon t-icon-user"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`group-max.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-avatar-group t-avatar--offset-right"
      >
        <div
          class="t-avatar t-avatar--circle"
        >
          <img
            src="https://tdesign.gtimg.com/site/avatar.jpg"
          />
        </div>
        <div
          class="t-avatar t-avatar--circle"
        >
          <span
            style="transform: scale(1);"
          >
            Avatar
          </span>
        </div>
        <div
          class="t-popup__reference"
        >
          <div
            class="t-avatar t-size-l t-avatar--circle"
          >
            <span
              style="transform: scale(1);"
            >
              +1
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-avatar-group t-avatar--offset-right"
      >
        <div
          class="t-avatar t-avatar--circle"
        >
          <img
            src="https://tdesign.gtimg.com/site/avatar.jpg"
          />
        </div>
        <div
          class="t-avatar t-avatar--circle"
        >
          <span
            style="transform: scale(1);"
          >
            Avatar
          </span>
        </div>
        <div
          class="t-popup__reference"
        >
          <div
            class="t-avatar t-size-l t-avatar--circle"
          >
            <span
              style="transform: scale(1);"
            >
              <svg
                class="t-icon t-icon-ellipsis"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-avatar-group t-avatar--offset-right"
      >
        <div
          class="t-avatar t-avatar--circle"
        >
          <img
            src="https://tdesign.gtimg.com/site/avatar.jpg"
          />
        </div>
        <div
          class="t-avatar t-avatar--circle"
        >
          <span
            style="transform: scale(1);"
          >
            Avatar
          </span>
        </div>
        <div
          class="t-popup__reference"
        >
          <div
            class="t-avatar t-size-l t-avatar--circle"
          >
            <span
              style="transform: scale(1);"
            >
              more
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`shape.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-horizontal"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-avatar t-avatar--circle"
        style="margin-right: 40px;"
      >
        <span
          style="transform: scale(1);"
        >
          W
        </span>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-avatar t-avatar--round"
        style="margin-right: 40px;"
      >
        <span
          style="transform: scale(1);"
        >
          W
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`size.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 24px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-space t-space-align-center t-space-horizontal"
        style="gap: 16px;"
      >
        <div
          class="t-space-item"
        >
          <div
            class="t-avatar t-size-s t-avatar--circle"
            style="margin-right: 40px;"
          >
            <span
              style="transform: scale(1);"
            >
              W
            </span>
          </div>
        </div>
        <div
          class="t-space-item"
        >
          <div
            class="t-avatar t-size-m t-avatar--circle"
            style="margin-right: 40px;"
          >
            <span
              style="transform: scale(1);"
            >
              W
            </span>
          </div>
        </div>
        <div
          class="t-space-item"
        >
          <div
            class="t-avatar t-size-l t-avatar--circle"
            style="margin-right: 40px;"
          >
            <span
              style="transform: scale(1);"
            >
              W
            </span>
          </div>
        </div>
        <div
          class="t-space-item"
        >
          <div
            class="t-avatar t-avatar--circle"
            style="width: 100px; height: 100px; font-size: 50px; margin-right: 40px;"
          >
            <span
              style="transform: scale(1);"
            >
              W
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-space t-space-align-center t-space-horizontal"
        style="gap: 16px;"
      >
        <div
          class="t-space-item"
        >
          <div
            class="t-avatar t-size-s t-avatar--round"
            style="margin-right: 40px;"
          >
            <span
              style="transform: scale(1);"
            >
              W
            </span>
          </div>
        </div>
        <div
          class="t-space-item"
        >
          <div
            class="t-avatar t-size-m t-avatar--round"
            style="margin-right: 40px;"
          >
            <span
              style="transform: scale(1);"
            >
              W
            </span>
          </div>
        </div>
        <div
          class="t-space-item"
        >
          <div
            class="t-avatar t-size-l t-avatar--round"
            style="margin-right: 40px;"
          >
            <span
              style="transform: scale(1);"
            >
              W
            </span>
          </div>
        </div>
        <div
          class="t-space-item"
        >
          <div
            class="t-avatar t-avatar--round"
            style="width: 100px; height: 100px; font-size: 50px; margin-right: 40px;"
          >
            <span
              style="transform: scale(1);"
            >
              W
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
